Ready until last chapter

--- a/classicthesis-config.tex
+++ b/classicthesis-config.tex
@@ -265,6 +265,10 @@
 % Last, but not least...
 % ********************************************************************
 \usepackage{classicthesis}
+\usepackage{cleveref} % Load cleveref package
+% Configure cleveref to recognize lstlisting
+\crefname{listing}{Listing}{Listings}
+\Crefname{listing}{Listing}{Listings}
 % ****************************************************************************************************
 
 
