Added chapter references

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -35,3 +35,59 @@
 	year = {2024},
 }
 
+@book{duckham_matt_gis_2024,
+	address = {London},
+	edition = {3},
+	title = {{GIS} {A} {Computing} {Perspective}},
+	isbn = {0.1201/9780429168093-2},
+	publisher = {CRC Press},
+	author = {Duckham, Matt and Sun, Qian and Worboys, Michael F.},
+	year = {2024},
+}
+
+@article{barcelo_expressive_2012,
+	title = {A {Expressive} {Languages} for {Path} {Queries} over {Graph}-{Structured} {Data}},
+	volume = {37},
+	doi = {10.1145/2389241.2389250},
+	journal = {ACM Transactions on Database Systems},
+	author = {Barceló, Pablo and Libkin, Leonid and Lin, Anthony and Wood, Peter},
+	month = dec,
+	year = {2012},
+	pages = {31},
+}
+
+@article{timon-reina_overview_2021,
+	title = {An overview of graph databases and their applications in the biomedical domain},
+	volume = {2021},
+	copyright = {http://creativecommons.org/licenses/by/4.0/},
+	issn = {1758-0463},
+	url = {https://academic.oup.com/database/article/doi/10.1093/database/baab026/6277712},
+	doi = {10.1093/database/baab026},
+	abstract = {Abstract
+            Over the past couple of decades, the explosion of densely interconnected data has stimulated the research, development and adoption of graph database technologies. From early graph models to more recent native graph databases, the landscape of implementations has evolved to cover enterprise-ready requirements. Because of the interconnected nature of its data, the biomedical domain has been one of the early adopters of graph databases, enabling more natural representation models and better data integration workflows, exploration and analysis facilities. In this work, we survey the literature to explore the evolution, performance and how the most recent graph database solutions are applied in the biomedical domain, compiling a great variety of use cases. With this evidence, we conclude that the available graph database management systems are fit to support data-intensive, integrative applications, targeted at both basic research and exploratory tasks closer to the clinic.},
+	language = {en},
+	urldate = {2024-05-27},
+	journal = {Database},
+	author = {Timón-Reina, Santiago and Rincón, Mariano and Martínez-Tomás, Rafael},
+	month = may,
+	year = {2021},
+	pages = {baab026},
+	file = {Volltext:/Users/daniellanghann/Zotero/storage/GUCMS5Y9/Timón-Reina et al. - 2021 - An overview of graph databases and their applicati.pdf:application/pdf},
+}
+
+@inproceedings{fan_adding_2016,
+	address = {San Francisco California USA},
+	title = {Adding {Counting} {Quantifiers} to {Graph} {Patterns}},
+	isbn = {978-1-4503-3531-7},
+	url = {https://dl.acm.org/doi/10.1145/2882903.2882937},
+	doi = {10.1145/2882903.2882937},
+	language = {en},
+	urldate = {2024-05-27},
+	booktitle = {Proceedings of the 2016 {International} {Conference} on {Management} of {Data}},
+	publisher = {ACM},
+	author = {Fan, Wenfei and Wu, Yinghui and Xu, Jingbo},
+	month = jun,
+	year = {2016},
+	pages = {1215--1230},
+	file = {Volltext:/Users/daniellanghann/Zotero/storage/42VJRPGF/Fan et al. - 2016 - Adding Counting Quantifiers to Graph Patterns.pdf:application/pdf},
+}
